# flavorsnap

./: .dockerignore  .gitignore  ACCESSIBILITY_FIX.md  ASSIGNED_ISSUES.md  BATCH_PROCESSING_PR.md  BATCH_PROCESSING_README.md  CONFIG_MANAGEMENT.md  CONFIG_MANAGEMENT_GUIDE.md  COVERAGE_FIX_GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.e2e  Dockerfile.frontend.dev  E2E_TESTING_IMPLEMENTATION.md  EXPORT_FUNCTIONALITY_README.md  GITHUB_PR_DESCRIPTION.md  HOW_TO_CREATE_PR.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  INPUT_VALIDATION_PR.md  MOBILE_RESPONSIVENESS_COMPLETE.md  NEXT_STEPS.md  PR_CI_CD_IMPLEMENTATION.md  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  QUEUE_MANAGEMENT.md  README.md  README_ADVANCED_FEATURES.md  TEST_COVERAGE_REPORT.md  VISUAL_GUIDE.md  config.production.yaml  config.staging.yaml  config.testing.yaml  config.yaml  cypress.config.js  dashboard.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  (+12 more)
api-gateway/: main.py  requirements.txt
backend/: SECURITY.md  package.json
config/: default.yaml  development.yaml  production.yaml
contracts/: README.md
database/: postgresql.conf
docker/: Dockerfile.secure
docs/: blockchain.md  configuration.md  development_workflow.md  file_purposes.md  installation.md  monitoring.md  project_structure.md  troubleshooting.md
elasticsearch/: elasticsearch.yml  filebeat.yml  logstash.conf
flavorsnap-food-registry/: Cargo.toml
flavorsnap-ip-contract/: Cargo.toml
frontend/: .gitignore  .pa11yci  BUGS_FIXED.md  MOBILE_IMPLEMENTATION_SUMMARY.md  jest.config.js  (+7 more)
(+591 files in other folders)
